Add Typography and Button Component

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./src/css/style.css">
   <title>Portafolio de Elisa</title>
 </head>
 <body>
+  <h1>Gonzalo Gutierrez</h1>
+  <h2>golo</h2>
+  <h3>De la Rosa</h3>
+  <h4>asdasd</h4>
+  <h5>Polo</h5>
+  <Button>asdasd</Button>
   
 </body>
 </html>
