--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h3>De la Rosa</h3>
   <h4>asdasd</h4>
   <h5>Polo</h5>
-  <Button>asdasd</Button>
-  
+  <Button class="button button-primary">asdasd</Button>
+  <Button class="button button-secondary">asdasd</Button>
 </body>
 </html>
