Add Background color

--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
   <title>Portafolio de Elisa</title>
 </head>
 <body>
-  <h1>Gonzalo Gutierrez</h1>
-  <h2>golo</h2>
-  <h3>De la Rosa</h3>
-  <h4>asdasd</h4>
-  <h5>Polo</h5>
-  <Button class="button button-primary">asdasd</Button>
-  <Button class="button button-secondary">asdasd</Button>
+  <div class="principal">
+  <header>
+    <img src="./src/img/LOGO.svg" alt="LOGO">
+    <div>
+      <button>HOLA</button>
+      <button>PROYECTOS</button>
+      <button>HABLEMOS</button>
+    </div>
+    <button class="button button-primary">Descargar Currículum</button>
+  </header>
+  </div>
 </body>
 </html>
