Add Header, Section Hola, and Icons

--- a/index.html
+++ b/index.html
@@ -1,22 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./src/css/style.css">
-  <title>Portafolio de Elisa</title>
-</head>
-<body>
-  <div class="principal">
-  <header>
-    <img src="./src/img/LOGO.svg" alt="LOGO">
-    <div>
-      <button>HOLA</button>
-      <button>PROYECTOS</button>
-      <button>HABLEMOS</button>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/css/style.css" />
+    <title>Portafolio de Elisa</title>
+  </head>
+  <body>
+    <div class="principal">
+      <header>
+        <img src="./src/img/LOGO.svg" alt="LOGO" />
+        <div class="header__sections">
+          <button>HOLA</button>
+          <button>PROYECTOS</button>
+          <button>HABLEMOS</button>
+        </div>
+        <button class="button button-primary">Descargar Currículum</button>
+      </header>
+
+      <main>
+        <section>
+          <div>
+            <h3>¡Hola a todos!</h3>
+            <h2>Soy Elisa</h2>
+            <p>Una Frontend Developer que le encanta implementar diseños que inspiran y atraen a las personas.</p>
+          </div>
+          <i class="icon"><img src="./src/icons/icon-phone.svg" alt=""></i>
+          <i class="icon"><img src="./src/icons/icon-important_mail.svg" alt=""></i>
+          <i class="icon"><img src="./src/icons/icon-instagram.svg" alt=""></i>
+          <i class="icon"><img src="./src/icons/icon-twitter_squared.svg" alt=""></i>
+        </section>
+      </main>
     </div>
-    <button class="button button-primary">Descargar Currículum</button>
-  </header>
-  </div>
-</body>
+  </body>
 </html>
