Add Hola Section Complete

--- a/index.html
+++ b/index.html
@@ -19,16 +19,20 @@
       </header>
 
       <main>
-        <section>
-          <div>
+        <section class="hola-section">
+          <div class="data">
             <h3>¡Hola a todos!</h3>
             <h2>Soy Elisa</h2>
-            <p>Una Frontend Developer que le encanta implementar diseños que inspiran y atraen a las personas.</p>
+            <p class="data__content body1">Una Frontend Developer que le encanta implementar diseños que inspiran y atraen a las personas.</p>
+            <div class="icons-group">
+              <i class="icon"><img src="./src/icons/icon-phone.svg" alt=""></i>
+              <i class="icon"><img src="./src/icons/icon-important_mail.svg" alt=""></i>
+              <i class="icon"><img src="./src/icons/icon-instagram.svg" alt=""></i>
+              <i class="icon"><img src="./src/icons/icon-twitter_squared.svg" alt=""></i>
+            </div>
           </div>
-          <i class="icon"><img src="./src/icons/icon-phone.svg" alt=""></i>
-          <i class="icon"><img src="./src/icons/icon-important_mail.svg" alt=""></i>
-          <i class="icon"><img src="./src/icons/icon-instagram.svg" alt=""></i>
-          <i class="icon"><img src="./src/icons/icon-twitter_squared.svg" alt=""></i>
+            <img src="./src/img/person.png" alt="Elisa Smile">
+          </div>
         </section>
       </main>
     </div>
