added hero component

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       </header>
 
       <main>
+
         <section class="hola-section">
           <div class="data">
             <h3>¡Hola a todos!</h3>
@@ -32,6 +33,22 @@
             </div>
           </div>
             <img src="./src/img/person.png" alt="Elisa Smile">
+        </section>
+
+        <section>
+          <div class="coment">
+            <h4 class="normal-weight">A lo largo de mi carrera como Frontend, he tenido el
+              privilegio de trabajar en proyectos retadores e increibles
+            </h4>
+            <h5>Aquí hay algunos que me gustaría compartir</h5>
+            <i><img src="./src/icons/icons-down.svg" alt=""></i>
+          </div>
+          <div class="hero">
+            <div>
+            <h4>leonidasesteban.com</h4>
+            <p class="body1">Accede a más de 120 proyectos que te ayudarán a mejorar tus habilidades como desarrollador Front-End.</p>
+            </div>
+            <img src="./src/img/💻  Macbook.png" alt="">
           </div>
         </section>
       </main>
