Add Hero component

--- a/index.html
+++ b/index.html
@@ -19,36 +19,54 @@
       </header>
 
       <main>
-
         <section class="hola-section">
           <div class="data">
             <h3>¡Hola a todos!</h3>
             <h2>Soy Elisa</h2>
-            <p class="data__content body1">Una Frontend Developer que le encanta implementar diseños que inspiran y atraen a las personas.</p>
+            <p class="data__content body1">
+              Una Frontend Developer que le encanta implementar diseños que
+              inspiran y atraen a las personas.
+            </p>
             <div class="icons-group">
-              <i class="icon"><img src="./src/icons/icon-phone.svg" alt=""></i>
-              <i class="icon"><img src="./src/icons/icon-important_mail.svg" alt=""></i>
-              <i class="icon"><img src="./src/icons/icon-instagram.svg" alt=""></i>
-              <i class="icon"><img src="./src/icons/icon-twitter_squared.svg" alt=""></i>
+              <i class="icon"
+                ><img src="./src/icons/icon-phone.svg" alt=""
+              /></i>
+              <i class="icon"
+                ><img src="./src/icons/icon-important_mail.svg" alt=""
+              /></i>
+              <i class="icon"
+                ><img src="./src/icons/icon-instagram.svg" alt=""
+              /></i>
+              <i class="icon"
+                ><img src="./src/icons/icon-twitter_squared.svg" alt=""
+              /></i>
             </div>
           </div>
-            <img src="./src/img/person.png" alt="Elisa Smile">
+          <img src="./src/img/person.png" alt="Elisa Smile" />
         </section>
 
         <section>
           <div class="coment">
-            <h4 class="normal-weight">A lo largo de mi carrera como Frontend, he tenido el
-              privilegio de trabajar en proyectos retadores e increibles
+            <h4 class="normal-weight">
+              A lo largo de mi carrera como Frontend, he tenido el privilegio de
+              trabajar en proyectos retadores e increibles
             </h4>
             <h5>Aquí hay algunos que me gustaría compartir</h5>
-            <i><img src="./src/icons/icons-down.svg" alt=""></i>
+            <i><img src="./src/icons/icons-down.svg" alt="" /></i>
           </div>
           <div class="hero">
-            <div>
-            <h4>leonidasesteban.com</h4>
-            <p class="body1">Accede a más de 120 proyectos que te ayudarán a mejorar tus habilidades como desarrollador Front-End.</p>
+            <div class="hero--data">
+              <h4 class="hero__title">leonidasesteban.com</h4>
+              <p class="body1">
+                Accede a más de 120 proyectos que te ayudarán a mejorar tus
+                habilidades como desarrollador Front-End.
+              </p>
+              <div class="group-separate">
+                <button class="button button-primary">Ver Proyecto</button>
+                <button class="button button-secondary"><i><img src="./src/icons/icon-github.svg" alt=""></i>Ver Codigo</button>
+              </div>
             </div>
-            <img src="./src/img/💻  Macbook.png" alt="">
+            <img src="./src/img/💻  Macbook.png" alt="" />
           </div>
         </section>
       </main>
