--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <h5>Aquí hay algunos que me gustaría compartir</h5>
             <i><img src="./src/icons/icons-down.svg" alt="" /></i>
           </div>
+
           <div class="hero">
             <div class="hero--data">
               <h4 class="hero__title">leonidasesteban.com</h4>
@@ -63,11 +64,74 @@
               </p>
               <div class="group-separate">
                 <button class="button button-primary">Ver Proyecto</button>
-                <button class="button button-secondary"><i><img src="./src/icons/icon-github.svg" alt=""></i>Ver Codigo</button>
+                <button class="button button-secondary">
+                  <i><img src="./src/icons/icon-github.svg" alt="" /></i>
+                  Ver Codigo
+                </button>
               </div>
             </div>
             <img src="./src/img/💻  Macbook.png" alt="" />
           </div>
+
+          <div class="recommendations">
+            <div class="recommendations--data">
+              <img src="./src/img/user.png" alt="">
+              <h4>
+                "Elisa ha sido de gran ayuda para acelerar ciertos esfuerzos de
+                desarrollo. Lo que nos hubiera llevado 6 meses solo les llevó
+                1,5 meses ".
+              </h4>
+              <h5>LEONIDAS ESTEBAN / COFUNDADOR Y CEO LEONIDASESTEBAN.COM</h5>
+            </div>
+          </div>
+
+          <div class="hero">
+            <img src="./src/img/📱 iPad.png" alt="" />
+            <div class="hero--data">
+              <h4 class="hero__title">MARVOL</h4>
+              <p class="body1">
+                Es el sitio oficial de Marvol Entertainment. 
+                Explore películas, personajes, cómics, programas de televisión, 
+                videos y más oficiales de Marvol.
+              </p>
+              <div class="group-separate">
+                <button class="button button-primary">Ver Proyecto</button>
+                <button class="button button-secondary">
+                  <i><img src="./src/icons/icon-github.svg" alt="" /></i>
+                  Ver Codigo
+                </button>
+              </div>
+            </div>
+          </div>
+
+          <div class="recommendations">
+            <div class="recommendations--data">
+              <img src="./src/img/user2.png" alt="">
+              <h4>
+                "Elisa ha superado mis expectativas desde el diseño hasta el desarrollo".
+              </h4>
+              <h5>JASON LOPEZ / COFUNDADOR Y CEO MARVOL</h5>
+            </div>
+          </div>
+
+          <div class="hero">
+            <div class="hero--data">
+              <h4 class="hero__title">Netnet</h4>
+              <p class="body1">
+                Películas y series ilimitadas y mucho más.
+                Disfruta donde quieras. Cancela cuando quieras.
+              </p>
+              <div class="group-separate">
+                <button class="button button-primary">Ver Proyecto</button>
+                <button class="button button-secondary">
+                  <i><img src="./src/icons/icon-github.svg" alt="" /></i>
+                  Ver Codigo
+                </button>
+              </div>
+            </div>
+            <img src="./src/img/📱 Iphone X.png" alt="" />
+          </div>
+
         </section>
       </main>
     </div>
