Add the last Recommend

--- a/index.html
+++ b/index.html
@@ -132,6 +132,17 @@
             <img src="./src/img/📱 Iphone X.png" alt="" />
           </div>
 
+          <div class="recommendations">
+            <div class="recommendations--data">
+              <img src="./src/img/user3.png" alt="">
+              <h4>
+                "Por primera vez en la historia de nuestra empresa, 
+                aparecimos en todas las plataformas en las que trabajamos".
+              </h4>
+              <h5>MARCO CORTEZ / NETNET</h5>
+            </div>
+          </div>
+
         </section>
       </main>
     </div>
