Fix some Styles

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="./src/css/style.css" />
     <title>Portafolio de Elisa</title>
   </head>
-  <body>
-    <div class="principal">
+  <body class="principal">
       <header>
         <img src="./src/img/LOGO.svg" alt="LOGO" />
         <div class="header__sections">
@@ -145,6 +144,5 @@
 
         </section>
       </main>
-    </div>
   </body>
 </html>
