--- a/index.html
+++ b/index.html
@@ -7,142 +7,160 @@
     <title>Portafolio de Elisa</title>
   </head>
   <body class="principal">
-      <header>
-        <img src="./src/img/LOGO.svg" alt="LOGO" />
-        <div class="header__sections">
-          <button>HOLA</button>
-          <button>PROYECTOS</button>
-          <button>HABLEMOS</button>
+    <header>
+      <img src="./src/img/LOGO.svg" alt="LOGO" />
+      <div class="header__sections">
+        <button>HOLA</button>
+        <button>PROYECTOS</button>
+        <button>HABLEMOS</button>
+      </div>
+      <button class="button button-primary">Descargar Currículum</button>
+    </header>
+
+    <main>
+      <section class="hola-section">
+        <div class="data">
+          <h3>¡Hola a todos!</h3>
+          <h2>Soy Elisa</h2>
+          <p class="data__content body1">
+            Una Frontend Developer que le encanta implementar diseños que
+            inspiran y atraen a las personas.
+          </p>
+          <div class="icons-group">
+            <i class="icon"><img src="./src/icons/icon-phone.svg" alt="" /></i>
+            <i class="icon"
+              ><img src="./src/icons/icon-important_mail.svg" alt=""
+            /></i>
+            <i class="icon"
+              ><img src="./src/icons/icon-instagram.svg" alt=""
+            /></i>
+            <i class="icon"
+              ><img src="./src/icons/icon-twitter_squared.svg" alt=""
+            /></i>
+          </div>
         </div>
-        <button class="button button-primary">Descargar Currículum</button>
-      </header>
+        <img src="./src/img/person.png" alt="Elisa Smile" />
+      </section>
 
-      <main>
-        <section class="hola-section">
-          <div class="data">
-            <h3>¡Hola a todos!</h3>
-            <h2>Soy Elisa</h2>
-            <p class="data__content body1">
-              Una Frontend Developer que le encanta implementar diseños que
-              inspiran y atraen a las personas.
+      <section>
+        <div class="coment">
+          <h4 class="normal-weight">
+            A lo largo de mi carrera como Frontend, he tenido el privilegio de
+            trabajar en proyectos retadores e increibles
+          </h4>
+          <h5>Aquí hay algunos que me gustaría compartir</h5>
+          <i><img src="./src/icons/icons-down.svg" alt="" /></i>
+        </div>
+
+        <div class="hero">
+          <div class="hero--data">
+            <h4 class="hero__title">leonidasesteban.com</h4>
+            <p class="body1">
+              Accede a más de 120 proyectos que te ayudarán a mejorar tus
+              habilidades como desarrollador Front-End.
             </p>
-            <div class="icons-group">
-              <i class="icon"
-                ><img src="./src/icons/icon-phone.svg" alt=""
-              /></i>
-              <i class="icon"
-                ><img src="./src/icons/icon-important_mail.svg" alt=""
-              /></i>
-              <i class="icon"
-                ><img src="./src/icons/icon-instagram.svg" alt=""
-              /></i>
-              <i class="icon"
-                ><img src="./src/icons/icon-twitter_squared.svg" alt=""
-              /></i>
+            <div class="group-separate">
+              <button class="button button-primary">Ver Proyecto</button>
+              <button class="button button-secondary">
+                <i><img src="./src/icons/icon-github.svg" alt="" /></i>
+                Ver Codigo
+              </button>
             </div>
           </div>
-          <img src="./src/img/person.png" alt="Elisa Smile" />
-        </section>
+          <img src="./src/img/💻  Macbook.png" alt="" />
+        </div>
 
-        <section>
-          <div class="coment">
-            <h4 class="normal-weight">
-              A lo largo de mi carrera como Frontend, he tenido el privilegio de
-              trabajar en proyectos retadores e increibles
+        <div class="recommendations">
+          <div class="recommendations--data">
+            <img src="./src/img/user.png" alt="" />
+            <h4>
+              "Elisa ha sido de gran ayuda para acelerar ciertos esfuerzos de
+              desarrollo. Lo que nos hubiera llevado 6 meses solo les llevó 1,5
+              meses ".
             </h4>
-            <h5>Aquí hay algunos que me gustaría compartir</h5>
-            <i><img src="./src/icons/icons-down.svg" alt="" /></i>
+            <h5>LEONIDAS ESTEBAN / COFUNDADOR Y CEO LEONIDASESTEBAN.COM</h5>
           </div>
+        </div>
 
-          <div class="hero">
-            <div class="hero--data">
-              <h4 class="hero__title">leonidasesteban.com</h4>
-              <p class="body1">
-                Accede a más de 120 proyectos que te ayudarán a mejorar tus
-                habilidades como desarrollador Front-End.
-              </p>
-              <div class="group-separate">
-                <button class="button button-primary">Ver Proyecto</button>
-                <button class="button button-secondary">
-                  <i><img src="./src/icons/icon-github.svg" alt="" /></i>
-                  Ver Codigo
-                </button>
-              </div>
-            </div>
-            <img src="./src/img/💻  Macbook.png" alt="" />
-          </div>
-
-          <div class="recommendations">
-            <div class="recommendations--data">
-              <img src="./src/img/user.png" alt="">
-              <h4>
-                "Elisa ha sido de gran ayuda para acelerar ciertos esfuerzos de
-                desarrollo. Lo que nos hubiera llevado 6 meses solo les llevó
-                1,5 meses ".
-              </h4>
-              <h5>LEONIDAS ESTEBAN / COFUNDADOR Y CEO LEONIDASESTEBAN.COM</h5>
+        <div class="hero">
+          <img src="./src/img/📱 iPad.png" alt="" />
+          <div class="hero--data">
+            <h4 class="hero__title">MARVOL</h4>
+            <p class="body1">
+              Es el sitio oficial de Marvol Entertainment. Explore películas,
+              personajes, cómics, programas de televisión, videos y más
+              oficiales de Marvol.
+            </p>
+            <div class="group-separate">
+              <button class="button button-primary">Ver Proyecto</button>
+              <button class="button button-secondary">
+                <i><img src="./src/icons/icon-github.svg" alt="" /></i>
+                Ver Codigo
+              </button>
             </div>
           </div>
+        </div>
 
-          <div class="hero">
-            <img src="./src/img/📱 iPad.png" alt="" />
-            <div class="hero--data">
-              <h4 class="hero__title">MARVOL</h4>
-              <p class="body1">
-                Es el sitio oficial de Marvol Entertainment. 
-                Explore películas, personajes, cómics, programas de televisión, 
-                videos y más oficiales de Marvol.
-              </p>
-              <div class="group-separate">
-                <button class="button button-primary">Ver Proyecto</button>
-                <button class="button button-secondary">
-                  <i><img src="./src/icons/icon-github.svg" alt="" /></i>
-                  Ver Codigo
-                </button>
-              </div>
+        <div class="recommendations">
+          <div class="recommendations--data">
+            <img src="./src/img/user2.png" alt="" />
+            <h4>
+              "Elisa ha superado mis expectativas desde el diseño hasta el
+              desarrollo".
+            </h4>
+            <h5>JASON LOPEZ / COFUNDADOR Y CEO MARVOL</h5>
+          </div>
+        </div>
+
+        <div class="hero">
+          <div class="hero--data">
+            <h4 class="hero__title">Netnet</h4>
+            <p class="body1">
+              Películas y series ilimitadas y mucho más. Disfruta donde quieras.
+              Cancela cuando quieras.
+            </p>
+            <div class="group-separate">
+              <button class="button button-primary">Ver Proyecto</button>
+              <button class="button button-secondary">
+                <i><img src="./src/icons/icon-github.svg" alt="" /></i>
+                Ver Codigo
+              </button>
             </div>
           </div>
+          <img src="./src/img/📱 Iphone X.png" alt="" />
+        </div>
 
-          <div class="recommendations">
-            <div class="recommendations--data">
-              <img src="./src/img/user2.png" alt="">
-              <h4>
-                "Elisa ha superado mis expectativas desde el diseño hasta el desarrollo".
-              </h4>
-              <h5>JASON LOPEZ / COFUNDADOR Y CEO MARVOL</h5>
-            </div>
+        <div class="recommendations">
+          <div class="recommendations--data">
+            <img src="./src/img/user3.png" alt="" />
+            <h4>
+              "Por primera vez en la historia de nuestra empresa, aparecimos en
+              todas las plataformas en las que trabajamos".
+            </h4>
+            <h5>MARCO CORTEZ / NETNET</h5>
           </div>
+        </div>
+      </section>
 
-          <div class="hero">
-            <div class="hero--data">
-              <h4 class="hero__title">Netnet</h4>
-              <p class="body1">
-                Películas y series ilimitadas y mucho más.
-                Disfruta donde quieras. Cancela cuando quieras.
-              </p>
-              <div class="group-separate">
-                <button class="button button-primary">Ver Proyecto</button>
-                <button class="button button-secondary">
-                  <i><img src="./src/icons/icon-github.svg" alt="" /></i>
-                  Ver Codigo
-                </button>
-              </div>
-            </div>
-            <img src="./src/img/📱 Iphone X.png" alt="" />
-          </div>
-
-          <div class="recommendations">
-            <div class="recommendations--data">
-              <img src="./src/img/user3.png" alt="">
-              <h4>
-                "Por primera vez en la historia de nuestra empresa, 
-                aparecimos en todas las plataformas en las que trabajamos".
-              </h4>
-              <h5>MARCO CORTEZ / NETNET</h5>
-            </div>
-          </div>
-
-        </section>
-      </main>
+      <section class="section-hablemos">
+        <h4 class="hero__title">HABLEMOS</h4>
+        <p class="body1">
+          Si está interesado en trabajar conmigo en su próximo proyecto, no dude
+          en ponerse en contacto conmigo.
+        </p>
+        <form class="form">
+          <label for="name">Nombre Completo:</label>
+          <input type="text" name="name" id="name">
+          <label for="mail">Correo electrónico</label>
+          <input type="email" name="mail" id="mail">
+          <label for="message">Mensaje:</label>
+          <textarea name="message" id="message" cols="30" rows="10"></textarea>
+        </form>
+      </section>
+      <footer>
+        <img src="./src/img/LOGO.svg" alt="LOGO" />
+        <p class="body1"></p>
+      </footer>
+    </main>
   </body>
 </html>
