--- a/index.html
+++ b/index.html
@@ -159,7 +159,19 @@
       </section>
       <footer>
         <img src="./src/img/LOGO.svg" alt="LOGO" />
-        <p class="body1"></p>
+        <p class="body1">Hecho con <span><img src="./src/icons/icon-heart_outline.svg" alt=""></span>de Elisa. Copyright 2021 - Todos los derechos reservados.</p>
+        <div class="icons-group">
+          <i class="icon"><img src="./src/icons/icon-phone.svg" alt="" /></i>
+          <i class="icon"
+            ><img src="./src/icons/icon-important_mail.svg" alt=""
+          /></i>
+          <i class="icon"
+            ><img src="./src/icons/icon-instagram.svg" alt=""
+          /></i>
+          <i class="icon"
+            ><img src="./src/icons/icon-twitter_squared.svg" alt=""
+          /></i>
+        </div>
       </footer>
     </main>
   </body>
