Add Views part 2

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button>PROYECTOS</button>
         <button>HABLEMOS</button>
       </div>
-      <button class="button button-primary">Descargar Currículum</button>
+      <button class="button button-primary"><span class="button-hidden">Descargar &nbsp</span>Currículum</button>
     </header>
 
     <main>
